--- a/main.css
+++ b/main.css
@@ -25,12 +25,13 @@ body {
 
     background-repeat: no-repeat;
     background-size: 300px;
+
+    will-change: transform;
 }
 
 .progress-bar {
     width: 300px;
     height: 300px;
-    transform: translateZ(0);
 }
 
 /*.avatar-box:before {*/
@@ -61,7 +62,5 @@ body {
     margin-top: -113px;
 
     border-radius: 50%;
-
-    transform: translateZ(0);
-    /*will-change: transform;*/
+    will-change: transform;
 }
